Removing Eclipse Collections from the dependencies.